--- a/htdocs/view/scss/headerfootermenu.css
+++ b/htdocs/view/scss/headerfootermenu.css
@@ -1,14 +1,24 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
   word-wrap: break-word;
 }
 
 .top-head {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   height: 70px;
   background-color: #CBCDFF;
@@ -18,11 +28,13 @@
 }
 .top-head .humberger-menu #menu-btn-check:checked ~ .menu-btn span::before {
   bottom: 0;
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 .top-head .humberger-menu #menu-btn-check:checked ~ .menu-btn span::after {
   top: 0;
-  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 .top-head .humberger-menu #menu-btn-check {
   display: none;
@@ -38,9 +50,18 @@
   position: fixed;
   top: 15px;
   left: 10px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -55,8 +76,9 @@
   width: 18px;
   height: 3px;
   background-color: white;
-  transition: all 0.3s;
   border-radius: 5px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 .top-head .humberger-menu .menu-btn__span::before {
   bottom: 8px;
@@ -81,6 +103,7 @@
   right: 100%;
   z-index: 10;
   background-color: white;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 .top-head .humberger-menu .menu-list__top {
@@ -92,9 +115,18 @@
 }
 .top-head .humberger-menu .menu-list__item {
   position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 15px 0;
   width: 100%;
   height: 40px;
@@ -103,13 +135,23 @@
   border-radius: 10px;
   overflow: hidden;
   z-index: 0;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 .top-head .humberger-menu .menu-list__item a {
   display: block;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   height: 40px;
   text-decoration: none;
@@ -125,6 +167,7 @@
   display: block;
   border-radius: 10px;
   background-color: #CBCDFF;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   left: 0;
 }
@@ -137,6 +180,7 @@
   display: block;
   border-radius: 10px;
   background-color: #FDCAEC;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
   left: 0;
 }
@@ -149,7 +193,8 @@
   height: 5px;
   border-top: 3px solid white;
   border-right: 3px solid white;
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 .top-head .humberger-menu .menu-list__item:nth-child(2n):after {
   content: "";
@@ -160,7 +205,8 @@
   height: 5px;
   border-top: 3px solid white;
   border-right: 3px solid white;
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 .top-head .humberger-menu .menu-list__item:hover::before {
   width: 100%;
@@ -177,18 +223,34 @@
   height: 50px;
 }
 .top-foot .top-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   list-style: none;
   height: 100%;
 }
 .top-foot .top-list__item {
-  flex: 1;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 100%;
   background-color: #E7E8FF;
   border-radius: 0 0 10px 10px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .top-foot .top-list__item:hover {
@@ -199,15 +261,25 @@
 }
 .top-foot .top-list__item a {
   display: block;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   height: 100%;
   text-decoration: none;
   color: black;
   font-weight: bold;
   border-radius: 0 0 10px 10px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .top-foot .top-list__item a:hover {
@@ -217,9 +289,18 @@
 .footer {
   position: fixed;
   bottom: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   height: 35px;
   background-color: #CBCDFF;
