--- a/htdocs/view/scss/headerfootermenu.scss
+++ b/htdocs/view/scss/headerfootermenu.scss
@@ -218,18 +218,18 @@
                 height: 60px;
             }
         
-            &--signup {
-            }
+            // &--signup {
+            // }
 
-            &--login {
-            }
+            // &--login {
+            // }
         
-            &--logout {
-                display: none;
-            }
+            // &--logout {
+            //     display: none;
+            // }
         
-            &--help {
-            }
+            // &--help {
+            // }
 
             a { 
                 display: block;
