--- a/htdocs/view/scss/adminpage.scss
+++ b/htdocs/view/scss/adminpage.scss
@@ -190,3 +190,197 @@
         }
     }
 }
+
+.adminpage-bottom {
+    width: 100%;
+
+    .tab {
+        width: 70%;
+        max-width: 1000px;
+        margin: 0 auto;
+
+        .tab_item {
+            display: block;
+            float: left;
+            width: calc(100%/3);
+            height: 30px;
+            border-radius: 10px 10px 0 0 ;
+            border-bottom: 3px solid variables.$dark_purple;
+            background-color: variables.$gray;
+            line-height: 30px;
+            text-align: center;
+            font-weight: bold;
+            overflow: hidden;
+            transition: all 0.2s ease;
+
+            &:hover {
+                cursor: pointer;
+                background-color: variables.$light_purple;
+            }
+        }
+
+        input[name="tab_item"] {
+            display: none;
+        }
+
+        &__switching {
+            display: none;
+            padding: 20px;
+            clear: both;
+            border-radius: 0 0 10px 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        &__contents {
+            list-style: none;
+        }
+
+        .fa-star::before {
+            content: "\f005";
+            font-family: "Font Awesome 5 Free";
+            -webkit-text-stroke: 1px white
+            // font-weight: 900;
+        }
+
+        .contents {
+            &__main{
+                position: relative;
+                margin-top: 20px;
+                width: 100%;
+                border: 3px solid variables.$dark_purple;
+                background-color: white;
+            }
+
+            &__top, &__bottom {
+                width: 100%;
+                height: 50px;
+            }
+
+            &__top{
+                display: flex;
+                border-bottom: 2px solid variables.$dark_purple;
+            }
+
+            &__sub{
+                display: flex;
+                margin-bottom: 20px;
+                justify-content: space-between;
+            }
+
+            &__admin{
+                display: flex;
+                width:50%;
+                // display:none;
+            }
+
+            &__delete{
+                    width:85px;
+                    height: 30px;
+                    text-align: center;
+                    line-height: 28px;
+                    border-bottom: 3px solid variables.$dark_purple;
+                    border-left: 3px solid variables.$dark_purple;
+
+                    a {
+                        color:red;
+                    }
+
+                    a:hover{
+                        color:variables.$hover_purple;
+                    }
+            }
+            
+            &__recover {
+                width: 85px;
+                height: 30px;
+                text-align: center;
+                line-height: 28px;
+                border-bottom: 3px solid variables.$dark_purple;
+                border-right: 3px solid variables.$dark_purple;
+
+                a {
+                    color: blue;
+                }
+
+                a:hover {
+                    color:variables.$hover_purple;
+                }
+            }
+
+            &__good {
+                width: 85px;
+                height: 30px;
+                text-align: center;
+                line-height: 28px;
+                border-bottom: 3px solid variables.$dark_purple;
+                border-right: 3px solid variables.$dark_purple;
+                border-left: 3px solid variables.$dark_purple;
+                cursor: pointer;
+            }
+
+            &__char-center {
+                padding-top: 20px;
+                text-align: center;
+            }
+
+            &__char-top {
+                padding: 5px 10px;
+            }
+
+            &__ribbon {
+                position: absolute;
+                top: -6px;
+                left: -6px;
+                height: 20px;
+                padding: 5px 10px;
+                padding-right: 40px;
+                background: variables.$light_purple;
+                line-height: 10px;
+
+                &::before {
+                    position: absolute;
+                    content: '';
+                    top: 100%;
+                    left: 0px;
+                    border: 3px solid transparent;
+                    border-top: 3px solid variables.$dark_purple;
+                    border-right: 3px solid variables.$dark_purple;
+                }
+
+                &::after {
+                    position: absolute;
+                    content: '';
+                    top: 0;
+                    right: -10px;
+                    border-top: 10px solid variables.$light_purple;
+                    border-right: 10px solid transparent;
+                    border-bottom: 10px solid variables.$light_purple;
+                    border-left: 0 solid variables.$light_purple;
+                }
+            }
+
+            &__title {
+                width: 60%;
+                height: 100%;
+                border-right: 2px solid variables.$dark_purple;
+                overflow: hidden;
+            }
+
+            &__datetime {
+                width: 40%;
+                height: 100%;
+                overflow: hidden;
+            }
+        }
+
+        #new_threadtab:checked ~ #thread_content,
+        #new_responsetab:checked ~ #response_content,
+        #goodtab:checked ~ #good_content {
+            display: block;
+        }
+    }
+
+    .tab input:checked + .tab_item {
+        background-color: variables.$light_purple;
+    }
+}
