--- a/htdocs/view/scss/top.scss
+++ b/htdocs/view/scss/top.scss
@@ -3,6 +3,36 @@
 @use "base";
 
 .top {
+    &-position {
+        width: 100%;
+        padding: 0 10%;
+        display: flex;
+        justify-content: space-between;
+    
+        .btn {
+            top: -18px;
+            width: 7%;
+            height: 35px;
+
+            &--back{
+                &::before{
+                    top: -6px;
+                    left: -6px;
+                }
+
+                &:hover::before{
+                    top: 0;
+                    left: 0;
+                }
+            }
+    
+        }
+
+        & div {
+            width: 5%;
+            height: 30px;
+        }
+    }
     .search {
         margin :0 auto;
         width: 70%;
@@ -31,6 +61,31 @@
             width: 40px;
             cursor: pointer;
         }
+    }
+    .keyword {
+        text-align: center;
+        margin: 20px auto;
+        width: 75%;
+        max-width: 1100px;
+        position: relative;
+        padding: 0.3em;
+        font-weight: bold;
+
+        &::after {
+            content: '';
+            z-index: -1;
+            position: absolute;
+            left: 0;
+            bottom: 0px;
+            width: 100%;
+            height: 18px;
+            border-radius: 10px;
+            background: repeating-linear-gradient(-45deg, variables.$dark_purple, variables.$dark_purple 2px, white 4px, white 8px);
+        }
+    }
+
+    .nohit {
+        text-align: center;
     }
 
     .tab {
@@ -292,6 +347,7 @@
                         margin-top: -6px; 
                     }
                 }
+                
                 &--last {
                     &::after {
                         content: '';
